--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "gildingTool",
-  "version": "0.11.2",
+  "name": "chgs",
+  "version": "0.12.0",
   "authors": [
     "riebel <groovetop@web.de>"
   ],
@@ -22,8 +22,14 @@
     "tests"
   ],
   "dependencies": {
+    "requirejs": null,
     "jquery": "~2.1.1",
     "rivets": "~0.6.10",
-    "nouislider": "~7.0.9"
+    "nouislider": "~7.0.9",
+    "base64": "~0.3.0",
+    "cryptojs": "*",
+    "d3": "~3.4.13",
+    "json2": "*",
+    "es5-shim": "~4.0.3"
   }
 }
